--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+  <a href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ">Click here to watch the video</a>
   </body>
 </html>
